// GENERATED FILE - DO NOT EDIT
import 'package:flutter_test/flutter_test.dart';
import 'package:flutter/material.dart';
import 'package:integration_test/integration_test.dart';
import 'package:sample_app/main.dart' as app;

import 'helpers.dart';

void main() {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  group('First Time User Experience', () {
    testWidgets('Successful Login', (tester) async {
      app.main();
      await tester.pumpAndSettle();

      await tester.pumpUntilFound(find.text('Login'));
      await tester.tap(find.byPlaceholder('Email'));
      await tester.enterText(find.byPlaceholder('Email'), 'qa@test.com');
      await tester.enterText(find.byPlaceholder('Password'), 'password123');
      await tester.tap(find.text('Sign In'));
      await tester.pumpUntilProgressCompleted(
        find.byType(LinearProgressIndicator),
      );
      await tester.pumpUntilFound(find.text('Welcome'));
      await tester.compareScreenshot('screenshot_welcome');
    });

    testWidgets('Invalid Login', (tester) async {
      app.main();
      await tester.pumpAndSettle();

      await tester.pumpUntilFound(find.text('Login'));
      await tester.tap(find.byPlaceholder('Email'));
      await tester.enterText(find.byPlaceholder('Email'), 'qa@test.com');
      await tester.enterText(find.byPlaceholder('Password'), 'password');
      await tester.tap(find.text('Sign In'));
      await tester.pump(Duration(milliseconds: 1000));
      expect(find.text('Invalid credentials'), findsOneWidget);
    });
  });
}
